# spectralops

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing_stuff.ipynb
spectralops/: SpectralCube.py  Spectrum.py  __init__.py  cube_ops.py  polyfit.py  spectral_cube.py
spectralops/band_parameters/: __init__.py  absorption_band_stats.py  absorption_feature.py  calculate_area.py  calculate_center.py  fit_absorption.py
spectralops/continuum_removal/: __init__.py  double_line.py  single_line.py
spectralops/single_spectrum/: __init__.py
spectralops/single_spectrum/continuum_removal/: __init__.py  double_line.py  single_line.py
spectralops/single_spectrum/smoothing/: __init__.py  moving_average.py  outlier_removal.py
spectralops/smoothing/: __init__.py  moving_average.py  outlier_removal.py
spectralops/spectral_classes/: __init__.py  spectral_cube.py  spectrum.py
spectralops/spectral_cube/: __init__.py
spectralops/spectral_cube/smoothing/: __init__.py  moving_average.py
spectralops/unmixing/: __init__.py  endmember.py  mixed_spectrum.py
spectralops/utils/: __init__.py  create_synthetic_spectra.py  cube_ops.py  find_wvl.py  fit_line.py  linear_interpolation.py  normalize_image.py  polyfit.py  pretty_print_runtime.py  rgb_composite.py
src/spectralops/: __init__.py  cube_ops.py
src/spectralops/band_parameters/: __init__.py  absorption_feature.py  calculate_area.py  calculate_depth.py
src/spectralops/smoothing/: moving_average.py  outlier_removal.py
src/spectralops/spectral_classes/: spectral_cube.py
(+4 files in other folders)
