[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralops"
description = """Common spectral operations for single spectra and spectral\
cubes implemented in python."""
authors = [
    {name = "Zachary M. Vig", email = "zvig@umd.edu"}
]
keywords = ["hyperspectral", "processing", "spectral cube", "image"]
version = "0.1.0"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}